2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php
	godmode/menu.php
	godmode/snmpconsole/snmp_trap_generator.php
	godmode/snmpconsole/snmp_alert.php
	godmode/snmpconsole/snmp_filters.php: Created new SNMP Console submenu
	inside monitoring item.

2012-04-02 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: added into function "html_debug_print" the
	equal output to log file, this is with more data.
	
	* include/functions_db.php: cleaned source code style.
	
	* extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_pandora.php: added extension to update pandora from the
	targz of Sourceforge.

2012-04-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/reporting/reporting_xml.php: Fixed a missed 
	modification of previous commit and added xml export
	to the new report items of inventory and inventory changes
	merged from trunk

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php: Fixed a problem with new visual console menu and
	selected style when navigation through visual console editor.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_menu.php,
	extensions/users_connected.php,
	operation/incidents/incident.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_statistics.php,
	operation/menu.php,
	operation/users/user_edit.php,
	operation/integria_incidents/incident.php,
	operation/integria_incidents/incident.files.php,
	operation/integria_incidents/incident.list.php,
	operation/messages/message.php: Created new menu item call workspace.

	* godmode/reporting/map_builder.php,
	operation/visual_console/render_view.php: Fixed some problems passing
	parameters related with new menu implementation.

2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>
